# ai_agent

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yaml  pyproject.toml  requirements_backend.txt  requirements_frontend.txt
frontend/: app.py  utils.py
frontend/.streamlit/: config.toml
scripts/: split_audio.sh  start_services.sh
src/: dump.rdb
src/agent/: __init__.py  main.py
src/agent/common/: auth_utils.py  db.py  logging_config.py  s3_uploads.py
src/agent/core/: logging_config.py
src/agent/graphs/: builder.py  graph.mmd  router.py
src/agent/graphs/nodes/: data_analysis.py  orchestrator.py  responder.py  tool_executor.py  utils.py
src/agent/ingestion/: embeddings.py  pipeline.py
src/agent/ingestion/document_loaders/: __init__.py  loaders.py  registry.py
src/agent/ingestion/text_splitters/: __init__.py  registry.py  text_splitters.py
src/agent/ingestion/text_splitters/splitters/: character.py  recursive.py  sentence.py
src/agent/memory/: redis_config.py  redis_history_manager.py
src/agent/models/: chat_messages.py  chat_sessions.py
src/agent/prompts/: load_prompts.py  prompts.yaml
src/agent/repositories/: chat_repository.py
src/agent/routers/: auth.py  chat.py  router_utils.py  transcription.py  upload.py  uploads.py
src/agent/schemas/: api.py  graph_state.py
src/agent/services/: llm.py
src/agent/static/css/: upload.css
src/agent/static/js/: upload.js
src/agent/templates/: index.html  upload.html
src/agent/tools/: audio_preprocess.py  stt_tool.py  weather.py  web_search.py
src/agent/tools/data_analysis/: dataset_registry.py  file_loader.py  parse_inline_data.py  python_repl.py  pythonrepl.py  repl_wrapper.py
src/agent/tools/transcription/: audio_preprocess.py  service.py  stt.py
src/agent/vector_store/: base.py
src/agent/vector_stores/: base.py
src/agent/worker/: celery_app.py  tasks.py
