[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.6.2",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.133.1",
    "ffmpeg>=1.4",
    "google-cloud-texttospeech>=2.34.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "redis>=7.2.1",
]
