[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "0.1.0"
description = "AI agent for transcription, data analysis and workflow intelligence"
authors=[{name="Rafid Mahbub"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.9",
    "boto3>=1.42.68",
    "celery>=5.6.2",
    "ddgs>=9.11.2",
    "docx2txt>=0.9",
    "e2b-code-interpreter>=2.4.1",
    "fastapi>=0.133.1",
    "fastembed>=0.8.0",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-postgres>=0.0.17",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langsmith[openai-agents]>=0.7.7",
    "onnxruntime>=1.19.2",
    "openai>=2.24.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "pymupdf4llm>=1.27.2.2",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "redis>=7.2.1",
    "sqlmodel>=0.0.37",
    "starlette>=0.52.1",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel"
]
dev = [
    "boto3-stubs~=1.42.68",
    "pandas-stubs~=2.3.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff] 
ignore = ["E402"]
